src/objects/Purchase__c.object
<CustomObject>
    <fields>
        <fullName>ClientId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ClientId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>GrandTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNumber__c</fullName>
        <label>TotalItems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>